--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage":"https://kartik777p.github.io/ReactCrudOperation",
   "name": "crud-application",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://kartik777p.github.io",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
